crates/apollo-compiler/test_data/diagnostics/0042_mutation_operation_with_undefined_fields.txt
Error: type `Mutation` does not have a field `undefinedMutationField`
    ╭─[0042_mutation_operation_with_undefined_fields.graphql:2:3]
    │
  2 │   undefinedMutationField
    │   ───────────┬──────────  
    │              ╰──────────── field `undefinedMutationField` selected here
    │ 
 10 │ type Mutation {
    │      ────┬───  
    │          ╰───── type `Mutation` defined here
    │ 
    │ Note: path to the field: `mutation adoptAPetMutation → undefinedMutationField`
────╯

